--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
     "expo": "~44.0.0",
+    "expo-font": "^10.0.4",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
@@ -25,7 +26,8 @@
     "react-navigation-header-buttons": "^6.3.1",
     "react-navigation-stack": "^2.10.4",
     "react-redux": "^7.2.6",
-    "redux": "^4.1.2"
+    "redux": "^4.1.2",
+    "expo-app-loading": "~1.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
