--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "^12.0.5",
     "@react-native-community/masked-view": "^0.1.11",
     "expo": "~44.0.0",
+    "expo-app-loading": "~1.3.0",
     "expo-font": "^10.0.4",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
@@ -26,11 +28,11 @@
     "react-navigation-header-buttons": "^6.3.1",
     "react-navigation-stack": "^2.10.4",
     "react-redux": "^7.2.6",
-    "redux": "^4.1.2",
-    "expo-app-loading": "~1.3.0"
+    "redux": "^4.1.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "redux-devtools-extension": "^2.13.9"
   },
   "private": true
 }
